Improve text readability; fix mobile layout.
The iframe for the YouTube videos was responsible for the text only
covering half of the screen (it was stretching the contents).

--- a/truth.css
+++ b/truth.css
@@ -1,3 +1,4 @@
+body { font-size: 21px; }
 body > div.Mathematics { font-family: "Andalé Mono, Lucida Console, Courier, Luminari"; white-space: pre-wrap; }
 body.shimmer { background-color: darkgray; color: lightgray; }
 body.shimmer a { background-color: darkgray; color: lightgray; }
@@ -7,7 +8,7 @@ bind:hover, bind:active, bind:visited, bind.shimmer { color: darkgray; cursor: h
 button { display: inline-block; }
 div.title {  }
 div.title button, div.title h1 { display: inline; }
-img { display: block; max-width: 100%; }
+iframe, img { display: block; max-width: 100%; }
 <!-- Borrowed from https://stackoverflow.com/a/12538532 -->
 .more_info { border-bottom: 1px dotted; position: relative; }
 .more_info .title { position: absolute; top: 20px; background: silver; padding: 4px; left: 0; white-space: nowrap; }
